2013-04-21  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add issue number references to all package lists.

	* common/package-list.xml: Regenerate .lzma and republish.
	* common/issue.log: Update accordingly.

	* mingw32/mingw32-package-list.xml: Regenerate .lzma and republish.
	* mingw32/issue.log: Update accordingly.

	* msys/msys-package-list.xml: Regenerate .lzma and republish.
	* msys/issue.log: Update accordingly.

2013-04-21  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add infrastructure for managing user contributed packages.

	* contrib: New directory.
	* configure.ac (AC_INIT): Bump version number to 2.1
	(mingw_ac_subdirs): Add 'contrib' as a managed sub-directory.

	* contrib/issue.log: New file; automatically generated, and adjusted
	to reflect the original publication dates for each of...
	* contrib/mingw32-libunistring.xml contrib/mingw32-pdcurses.xml:
	...these new files; copy them from existing published catalogue, and
	replace their issue number tags with templates, to capture future
	updates automatically.

2013-04-19  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct several incorrectly assigned file attributes.

	* mingw32/issue.log mingw32/mingw32-dos2unix.xml: chmod -x
	* msys/issue.log msys/msys-dos2unix.xml msys/msys-m4.xml: Likewise.
	* ChangeLog: Likewise.

2013-04-19  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Support automatic capture of infrastructure changes.

	* Makefile.stub.in (top_srcdir): New macro; define it.

	* Makefile.in (VPATH, top_srcdir): New macros; define them.
	(configure, config.status, Makefile): New build rules; implement them,
	to be triggered by repository infrastructure changes.

	* Makefile.comm.in (VPATH): Append top_srcdir and top_builddir.
	(configure, config.status, Makefile): New build rules; implement them,
	to be triggered by repository infrastructure changes.

2013-04-16  Keith Marshall  <keithmarshall@users.sourceforge.net>
